# marderlab

./: .gitignore  README.md  pyproject.toml
configs/: default.yml  genai.yml
reports/: PROJECT_CONTEXT_NEXT_CHAT.md  notebook_pipeline_audit.json  notebook_pipeline_status_report.md  porting_decisions_locked.md  user_preferences_context.yml
src/marderlab_tools/: __init__.py  cli.py
src/marderlab_tools/agent/: __init__.py  agent_loop.py  context_service.py  model_router.py  tool_registry.py
src/marderlab_tools/analysis/: __init__.py  burst_common.py  contracture.py  control.py  dualhik.py  freqrange.py  gm56acclim.py  gm56weaklink.py  heartbeat.py  heartbeat_common.py  hikcontrol.py  muscle.py  nerve_evoked.py  rawheart.py
src/marderlab_tools/app/: __init__.py  genai_window.py
src/marderlab_tools/checks/: __init__.py  validators.py
src/marderlab_tools/config/: schema.py
src/marderlab_tools/io/: __init__.py  abf_loader.py  experiment_discovery.py
tests/integration/: test_contracture_pipeline.py  test_exclude_incomplete_metadata.py  test_gm56weaklink_pipeline.py  test_heartbeat_pipeline.py  test_hikcontrol_pipeline.py  test_nerve_evoked_pipeline.py  test_run_all_fallback_metadata.py  test_subset_visual_progress.py
tests/smoke/: test_doctor_command.py
tests/unit/: test_agent_context_service.py  test_agent_loop.py  test_agent_model_router.py  test_agent_tool_registry.py  test_baseline.py  test_discovery.py  test_genai_window.py  test_metadata.py  test_modeling_ports.py  test_quality.py  test_stats_markers.py  test_stimulusgen.py  test_units.py
(+21 files in other folders)
